# GO2_tasks

./: CMakeLists.txt  package.xml
example/: CMakeLists.txt
example/go2/: go2_sport_client.cpp
